# chat2desk_test

./: .gitignore  README.md  main.py  pyproject.toml  test.py
